# vc_t2_22531_22999_23000

./: CMakeLists.txt  image.ppm  main.cpp  readme.md  teste.pgm  teste_open.pgm  teste_seg.pgm  vc.c  vc.h
